Structure the User class for MongoDB document mapping

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.data.mongodb.uri=mongodb+srv://lucasmasson001:D8avMf9G6qpEdT4B@prakem.nj932.mongodb.net/prakem?retryWrites=true&w=majority
+jwt.secret=prakem_finantials
+jwt.expiration=3600000
