--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.data.mongodb.uri=mongodb+srv://lucasmasson001:D8avMf9G6qpEdT4B@prakem.nj932.mongodb.net/prakem?retryWrites=true&w=majority
-jwt.secret=prakem_finantials
+jwt.secret=your-very-secure-and-long-secret-key-1234567890!@#$%^&*()
 jwt.expiration=3600000
