--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.data.mongodb.uri=${MONGODB_URI}
-jwt.secret=your-very-secure-and-long-secret-key-1234567890!@#$%^&*()
+jwt.secret=${PRAKEM_KEY}
 jwt.expiration=3600000
