--- a/pom.xml
+++ b/pom.xml
@@ -88,10 +88,11 @@
 			<version>3.1.0</version>
 		</dependency>
 		<dependency>
-			<groupId>org.springdoc</groupId>
-			<artifactId>springdoc-openapi-ui</artifactId>
-			<version>1.8.0</version>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>5.2.0</version>
 		</dependency>
+
 	</dependencies>
 
 	<build>
